--- a/angular-youtube/src/app/app.component.html
+++ b/angular-youtube/src/app/app.component.html
@@ -1,2 +1,4 @@
-<header>Hello</header>
-<router-outlet></router-outlet>
+<header>Header</header>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
