--- a/angular-youtube/src/styles.scss
+++ b/angular-youtube/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -13,20 +12,27 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $angular-youtube-primary: mat.define-palette(mat.$indigo-palette);
-$angular-youtube-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$angular-youtube-accent: mat.define-palette(
+        mat.$pink-palette,
+        A200,
+        A100,
+        A400
+);
 
 // The warn palette is optional (defaults to red).
 $angular-youtube-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-youtube-theme: mat.define-light-theme((
-  color: (
-    primary: $angular-youtube-primary,
-    accent: $angular-youtube-accent,
-    warn: $angular-youtube-warn,
-  )
-));
+$angular-youtube-theme: mat.define-light-theme(
+        (
+            color: (
+                primary: $angular-youtube-primary,
+                accent: $angular-youtube-accent,
+                warn: $angular-youtube-warn,
+            ),
+        )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +41,25 @@ $angular-youtube-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+:root {
+    --base-background: #fff;
+    --light-theme-content-background: rgb(245, 245, 245);
+    --dark-theme-base-background: #606060;
+    --dark-theme-content-background: #0f0f0f;
+    --outline: rgba(0, 0, 0, 0.1);
+    --shadow: rgba(0, 0, 0, 0.25);
+    --brand-button-background-hover: #990412;
+    --viewed-line: #990412;
+    --nav-link-active: rgba(255, 255, 255, 0.5);
+    --nav-link-hover: rgb(245, 245, 245);
+    --error-indicator: #990412;
+}
