--- a/angular-youtube/src/app/channel/channel.component.html
+++ b/angular-youtube/src/app/channel/channel.component.html
@@ -1,9 +1,14 @@
-<section class="channel">
-    <img class="channel__banner" alt="banner"/>
+<section *ngIf="channel$ | async as channel" class="channel">
+    <img src="{{ channel.banner + EXTENSION_FOR_BANNER }}" class="channel__banner" alt="banner"/>
     <div class="channel__container">
         <div class="channel__header">
+            <channel-data
+                [thumbnail]="channel.thumbnail"
+                [title]="channel.title"
+                [subscribersCount]="channel.subscribersCount"
+            ></channel-data>
             <channel-sub-btn></channel-sub-btn>
         </div>
+        <channel-tabs></channel-tabs>
     </div>
-    <channel-tabs></channel-tabs>
 </section>
