AYL-24: added services folder. Links moved to .env

--- a/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.html
+++ b/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.html
@@ -1,7 +1,7 @@
 <div class="channel__tabs">
     <mat-icon class="channel__tabs-arrow">keyboard_arrow_left</mat-icon>
     <a [routerLink]="['/channel-page']" [routerLinkActive]="['active']" class="channel__tabs-tab">HOME</a>
-    <a [routerLink]="['/channel-page/video']" [routerLinkActive]="['active']" class="channel__tabs-tab">VIDEO</a>
+    <a [routerLink]="['/channel-page/video']" [routerLinkActive]="['active']" class="channel__tabs-tab">VIDEOS</a>
     <a [routerLink]="['/channel-page/playlists']" [routerLinkActive]="['active']" class="channel__tabs-tab">PLAYLISTS</a>
     <a [routerLink]="['/channel-page/community']" [routerLinkActive]="['active']" class="channel__tabs-tab">COMMUNITY</a>
     <a [routerLink]="['/channel-page/channels']" [routerLinkActive]="['active']" class="channel__tabs-tab">CHANNELS</a>
