--- a/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.scss
+++ b/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     height: 48px;
     align-items: center;
+
     &-tab {
         font-size: 14px;
         font-family: sans-serif;
@@ -10,39 +11,45 @@
         text-decoration: none;
         padding: 0 32px;
         transition: .3s all;
+
         &.active {
             color: #030303;
             border-bottom: 3px solid #606060;
         }
+
         &:hover {
             color: #030303;
         }
+
         &:target {
             background-color: #606060;
         }
     }
+
     &-arrow {
         cursor: pointer;
     }
+
     &__search {
         display: flex;
-        align-items: start;
+        align-items: center;
         overflow: hidden;
+
         &-icon {
+            transform: translateY(-3px);
             width: 22px;
             height: 22px;
             cursor: pointer;
             margin-right: 5px;
         }
+
         &-input {
             border: none;
-            outline: none;
-            border-bottom: 1px solid black;
-            padding: 5px 0;
+            height: 100%;
+
             &.disable {
                 visibility: hidden;
             }
         }
     }
-
 }
