--- a/angular-youtube/src/app/video/video.component.html
+++ b/angular-youtube/src/app/video/video.component.html
@@ -18,21 +18,5 @@
             </p>
         </div>
     </div>
-    <div class="related-videos-collection">
-        <div
-            class="related-videos-item"
-            *ngFor="let relatedVideo of relatedVideos$"
-        >
-            <iframe
-                class="iframe"
-                width="168"
-                height="90"
-                [src]="createSafeUrl(relatedVideo.id)"
-            >
-            </iframe>
-            <h2 class="related-video__title">
-                {{ relatedVideo.snippet.title }}
-            </h2>
-        </div>
-    </div>
+    <app-related-videos [relatedVideos]="relatedVideos$"></app-related-videos>
 </section>
