--- a/angular-youtube/src/app/search/component/search.component.html
+++ b/angular-youtube/src/app/search/component/search.component.html
@@ -8,55 +8,40 @@
             {{ videoListView ? "Список" : "Сетка" }}
         </button>
     </section>
+
     <section
         class="search-page__video-items video-items_grid"
         *ngIf="videoListView"
     >
-        <mat-card
-            class="search-page__item"
-            *ngFor="let videoItem of searchService.videoList"
-        >
-            <iframe
-                class="search-page__iframe"
-                [src]="
-                    sanitizer.bypassSecurityTrustResourceUrl(videoItem.videoURL)
-                "
-            >
-            </iframe>
-            <div class="search-page__container">
-                <img class="search-page__img" [src]="videoItem.authorUrl" />
-                <div class="search-page__container-right">
-                    <h2 class="search-page__title">{{ videoItem.title }}</h2>
-                    <h3 class="search-page__author-name">
-                        {{ videoItem.author }}
-                    </h3>
-                    <div class="search-page__container-bottom">
-                        <span class="search-page__view">
-                            {{ videoItem.view }} просмотров
-                        </span>
-                        <span class="search-page__date">
-                            {{ videoItem.date }} дней назад
-                        </span>
-                    </div>
-                </div>
-            </div>
+        <mat-card class="search-page__item" *ngFor="let videoItem of videos">
+            <img
+                class="search-page__img"
+                [src]="videoItem.snippet.thumbnails.high.url"
+            />
+            <h1 class="search-page__title">{{ videoItem.snippet.title }}</h1>
         </mat-card>
     </section>
+
     <section
         class="search-page__video-items video-items_list"
         *ngIf="!videoListView"
     >
         <mat-card
-            class="search-page__item"
-            *ngFor="let videoItem of searchService.videoList"
+            class="search-page__item item-list"
+            *ngFor="let videoItem of videos"
         >
-            <iframe
-                class="search-page__iframe"
-                [src]="
-                    sanitizer.bypassSecurityTrustResourceUrl(videoItem.videoURL)
-                "
-            >
-            </iframe>
+            <img
+                class="search-page__img img-list"
+                [src]="videoItem.snippet.thumbnails.high.url"
+            />
+            <div class="search-page__video-items item-list__container">
+                <h1 class="search-page__title">
+                    {{ videoItem.snippet.title }}
+                </h1>
+                <p class="search-page__description">
+                    {{ videoItem.snippet.description }}
+                </p>
+            </div>
         </mat-card>
     </section>
 </section>
