--- a/angular-youtube/src/app/search/component/search.component.scss
+++ b/angular-youtube/src/app/search/component/search.component.scss
@@ -25,48 +25,13 @@
             padding: 0;
             border: none;
 
-            .search-page__iframe {
+            .search-page__img {
                 width: 100%;
-                height: 150px;
+                height: 220px;
             }
 
-            .search-page__container {
-                display: flex;
-                gap: 20px;
-                padding: 10px;
-
-                .search-page__img {
-                    width: 50px;
-                    height: 50px;
-                    border-radius: 50%;
-                    cursor: pointer;
-                }
-
-                .search-page__title {
-                    font-size: 16px;
-                    line-height: 20px;
-                    margin: 0;
-                    cursor: pointer;
-                }
-
-                .search-page__author-name {
-                    font-size: 12px;
-                    margin: 0;
-                    color: gray;
-                    cursor: pointer;
-                }
-
-                .search-page__container-bottom {
-                    display: flex;
-                    gap: 10px;
-                }
-
-                .search-page__view,
-                .search-page__date {
-                    font-size: 10px;
-                    margin: 0;
-                    color: gray;
-                }
+            .search-page__title{
+                font-size: 16px;
             }
         }
     }
@@ -74,5 +39,25 @@
     .video-items_list{
         flex-direction: column;
         align-items: center;
+
+        .item-list{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+            padding: 10px;
+
+            .img-list{
+                height: 150px;
+                width: 200px;
+            }
+
+            .item-list__container{
+                display: flex;
+                flex-direction: column;
+                width: 80%;
+                background-color: white;
+            }
+        }
     }
 }
