--- a/angular-youtube/src/app/components/header/header.component.html
+++ b/angular-youtube/src/app/components/header/header.component.html
@@ -8,12 +8,17 @@
             alt="youtube logo"
         />
     </div>
-    <div class="header__middle">
+    <form 
+        class="header__middle"
+        #searchForm="ngForm"
+        (ngSubmit)="submit(searchForm)"
+    >
         <mat-form-field class="header__search" appearance="fill">
             <mat-label>Запрос</mat-label>
             <input
-                [(ngModel)]="query"
+                ngModel
                 matInput
+                #search="ngModel"
                 placeholder="Введите запрос"
                 name="search"
                 id="search"
@@ -22,8 +27,12 @@
                 required
             />
         </mat-form-field>
-        <button class="header__search-button" type="submit">
+        <button 
+            class="header__search-button" 
+            type="submit"
+            [disabled]="!searchForm.valid"
+            >
             <mat-icon class="header__icon">search</mat-icon>
         </button>
-    </div>
+    </form>
 </div>
