--- a/angular-youtube/src/app/search/component/search.component.scss
+++ b/angular-youtube/src/app/search/component/search.component.scss
@@ -12,14 +12,14 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        background-color: rgba(204, 204, 204, 0.056);
         gap: 20px;
+        cursor: pointer;
 
         .search-page__item {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            width: 20%;
+            max-width: 350px;
             gap: 10px;
             padding: 0;
             border: none;
@@ -43,6 +43,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            max-width: none;
             width: 90%;
             padding: 10px;
 
