AYL-4: get categories for filtering

--- a/angular-youtube/src/app/search/component/search.component.html
+++ b/angular-youtube/src/app/search/component/search.component.html
@@ -1,5 +1,14 @@
 <section class="search-page">
     <section class="search-page__view-actions">
+        <mat-form-field appearance="fill">
+            <mat-label>Фильтрация</mat-label>
+            <mat-select>
+                <mat-option>Все</mat-option>
+                <mat-option *ngFor="let category of categories$ | async as categories" [value]="category">{{
+                    category.snippet.title
+                }}</mat-option>
+            </mat-select>
+        </mat-form-field>
         <button
             mat-raised-button
             class="search-page_view-change"
