--- a/angular-youtube/src/app/video/video.component.scss
+++ b/angular-youtube/src/app/video/video.component.scss
@@ -4,4 +4,9 @@
     justify-content: space-between;
     max-width: 1300px;
     margin: 20px auto;
+
+    .current-video {
+        max-width: 920px;
+        width: 100%;
+    }
 }
