--- a/angular-youtube/src/app/video/video.component.html
+++ b/angular-youtube/src/app/video/video.component.html
@@ -4,5 +4,5 @@
         <app-video-info [currentVideo]="currentVideo"></app-video-info>
         <app-comments></app-comments>
     </div>
-    <app-related-videos [relatedVideos]="relatedVideos$"></app-related-videos>
+    <app-related-videos [relatedVideos]="relatedVideos"></app-related-videos>
 </section>
