--- a/angular-youtube/src/app/video/comments/comments.component.scss
+++ b/angular-youtube/src/app/video/comments/comments.component.scss
@@ -2,7 +2,26 @@
     max-width: 900px;
     width: 100%;
 
-    .comments-section__comments-collection {
+    &__add-comment {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        font-size: 18px;
+
+        .form-field {
+            width: 100%;
+        }
+
+        .add-comment__buttons {
+            display: flex;
+            justify-content: space-between;
+            max-width: 250px;
+            width: 100%;
+        }
+    }
+
+    &__comments-collection {
         margin-top: 30px;
 
         .comments-collection__item-comment {
@@ -37,8 +56,7 @@
 
                 .under-comment {
                     display: flex;
-                    max-width: 150px;
-                    width: 100%;
+                    max-width: 140px;
                     justify-content: space-between;
 
                     .button-reply {
