--- a/angular-youtube/src/app/video/comments/input-comment/input-comment.component.html
+++ b/angular-youtube/src/app/video/comments/input-comment/input-comment.component.html
@@ -1,6 +1,6 @@
 <div
     class="comments-section__add-comment"
-    *ngIf="isReplyActive || operation === 'comment'"
+    *ngIf="operation === 'comment'"
 >
     <mat-form-field class="form-field">
         <mat-label>Enter your {{ operation }}</mat-label>
