--- a/angular-youtube/src/app/video/comments/comments.component.scss
+++ b/angular-youtube/src/app/video/comments/comments.component.scss
@@ -56,7 +56,8 @@
 
                 .under-comment {
                     display: flex;
-                    max-width: 140px;
+                    max-width: 150px;
+                    width: 100%;
                     justify-content: space-between;
 
                     .button-reply {
