AYL-13: created publication data pipe, corrected styles, added link to channel page,changed the route to the video page

--- a/angular-youtube/src/app/video/comments/comments.component.html
+++ b/angular-youtube/src/app/video/comments/comments.component.html
@@ -14,9 +14,14 @@
                     [src]="comment.snippet.authorProfileImageUrl"
                 />
                 <div>
-                    <p class="author-display-name">
-                        {{ comment.snippet.authorDisplayName }}
-                    </p>
+                    <div class="upper-comment">
+                        <p class="author-display-name">
+                            {{ comment.snippet.authorDisplayName }}
+                        </p>
+                        <p class="published-at">
+                            {{ comment.snippet.publishedAt | publicationData}}
+                        </p>
+                    </div>
                     <p class="text-original">
                         {{ comment.snippet.textOriginal }}
                     </p>
