--- a/angular-youtube/src/app/video/comments/comments.component.scss
+++ b/angular-youtube/src/app/video/comments/comments.component.scss
@@ -38,8 +38,17 @@
                     margin-right: 20px;
                 }
 
-                .author-display-name {
-                    font-weight: 500;
+                .upper-comment {
+                    display: flex;
+
+                    .author-display-name {
+                        font-weight: 500;
+                    }
+
+                    .published-at {
+                        margin-left: 10px;
+                        font-size: 13px;
+                    }
                 }
 
                 .comment-likes {
