--- a/angular-youtube/src/app/video/video-info/video-info.component.scss
+++ b/angular-youtube/src/app/video/video-info/video-info.component.scss
@@ -40,6 +40,11 @@
             .channel-title {
                 font-size: 16px;
             }
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
         }
 
         .info-section__description {
