--- a/angular-youtube/src/app/search/component/search.component.html
+++ b/angular-youtube/src/app/search/component/search.component.html
@@ -1,16 +1,34 @@
 <section class="search-page">
     <section class="search-page__view-actions">
-        <mat-form-field *ngIf="showFilter" class="search-page_filter" appearance="fill">
+        <mat-form-field
+            *ngIf="showFilter"
+            class="search-page_filter"
+            appearance="fill"
+        >
             <mat-label>Фильтрация</mat-label>
-            <mat-select 
-                ngModel 
-                (ngModelChange)="showVideosByFilter($event)"
-            >
+            <mat-select ngModel (ngModelChange)="showVideosByFilter($event)">
                 <mat-option>Все</mat-option>
                 <mat-option
                     *ngFor="let category of categories$ | async as categories"
                     [value]="category.id"
                     >{{ category.snippet.title }}</mat-option
+                >
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field
+            *ngIf="!showFilter"
+            class="search-page_filter"
+            appearance="fill"
+        >
+            <mat-label>Сортировка</mat-label>
+            <mat-select
+                ngModel
+                (ngModelChange)="showVideosBySortCondition($event)"
+            >
+                <mat-option
+                    *ngFor="let condition of sortConditions"
+                    [value]="condition.value"
+                    >{{ condition.title }}</mat-option
                 >
             </mat-select>
         </mat-form-field>
@@ -59,6 +77,6 @@
         </mat-card>
     </section>
     <section class="search-page__item item-load" *ngIf="!(videos$ | async)">
-        <mat-spinner style="margin:0 auto"></mat-spinner>
+        <mat-spinner style="margin: 0 auto"></mat-spinner>
     </section>
 </section>
