AYL-5: change API KEY

--- a/angular-youtube/src/app/components/header/header.component.html
+++ b/angular-youtube/src/app/components/header/header.component.html
@@ -14,12 +14,12 @@
         (ngSubmit)="submit(searchForm)"
     >
         <mat-form-field class="header__search" appearance="fill">
-            <mat-label>Запрос</mat-label>
+            <mat-label>Query</mat-label>
             <input
                 ngModel
                 matInput
                 #search="ngModel"
-                placeholder="Введите запрос"
+                placeholder="Enter a query"
                 name="search"
                 id="search"
                 class="header__input"
