--- a/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
+++ b/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
@@ -75,3 +75,58 @@
         }
     }
 }
+
+.video-grid-item {
+    display: grid;
+    grid-template-rows: 165px auto;
+    grid-template-columns: 295px;
+
+    &__link {
+        position: relative;
+        cursor: pointer;
+        overflow: hidden;
+
+        &-image {
+            height: 165px;
+        }
+
+        &-time {
+            position: absolute;
+        }
+    }
+
+    &__wrapper {
+        display: grid;
+        grid-template-columns: 48px 225px;
+        grid-template-rows: auto;
+
+        &-icon {
+            height: 36px;
+            width: 36px;
+            border-radius: 100%;
+            margin-top: 12px;
+        }
+
+        &__info {
+            padding-top: 12px;
+
+            &-header {
+                font-size: 14px;
+                color: #030303;
+                font-family: sans-serif;
+                font-weight: 700;
+            }
+
+            &-name {
+                color: #606060;
+                font-size: 12px;
+                line-height: 18px;
+            }
+
+            &-views {
+                font-size: 12px;
+                color: #606060;
+            }
+        }
+    }
+}
