AYL-8: create-channel-playlists and some more

--- a/angular-youtube/src/app/channel/channel-data/channel-data.component.html
+++ b/angular-youtube/src/app/channel/channel-data/channel-data.component.html
@@ -2,6 +2,6 @@
     <img src="{{ thumbnail }}" class="channel__data-icon" alt="thumbnail"/>
     <div class="channel__data__info">
         <div class="channel__data__info-title">{{ title }}</div>
-        <div class="channel__data__info-subs">{{ subscribersCount }}</div>
+        <div class="channel__data__info-subs">{{ subscribersCount }} subscribers</div>
     </div>
 </div>
